fix z-index

--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -18,7 +18,7 @@ $inputBorderRadius: 4px;
     border-radius: 0 0 $inputBorderRadius $inputBorderRadius;
     background-color: $inputBackgroundColor;
     box-shadow: 0 10px 20px $darkShade5;
-    z-index: 1;
+    z-index: 10;
 
     &_visible {
       display: block;
